secondfile/objects/RDS_History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <description>For hodling Attribute Name</description>
        <label>Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_New_Value__c</fullName>
        <label>Attribute New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Old_Value__c</fullName>
        <description>For holding OlD value for RDS</description>
        <label>Attribute Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealHash__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For holding Deal Hash has ID</description>
        <label>Deal Hash</label>
        <referenceTo>Deal_Hash__c</referenceTo>
        <relationshipName>RDSHistoryTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Encrypted_Password__c</fullName>
        <description>Encrypted Password</description>
        <label>Encrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Description__c</fullName>
        <label>History Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Premise_Number__c</fullName>
        <description>This is a technical field to capture Premise Number related to the History Tracking record, not required on page layout.</description>
        <formula>RDSCircuitVLANDetails__r.CVLAN_Premise_Number__c</formula>
        <label>History Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RDSHistoryTracking</relationshipLabel>
        <relationshipName>RDSHistoryTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PremiseDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>RDSHistoryTracking</relationshipLabel>
        <relationshipName>RDSHistoryTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDSCircuitVLANDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipLabel>RDSHistoryTracking</relationshipLabel>
        <relationshipName>RDSHistoryTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDSModifiedDateTime__c</fullName>
        <description>For Tracking the RDS Modified Date/Time</description>
        <label>RDS Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Protocal__c</fullName>
        <description>For Capturing Routing Protocal</description>
        <label>Routing Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-V4 Family Data</label>
        <referenceTo>RDS_V4_Family_Data__c</referenceTo>
        <relationshipLabel>RDSHistoryTracking</relationshipLabel>
        <relationshipName>RDSHistoryTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>V6Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-V6 Family Data</label>
        <referenceTo>V6_Family_Data__c</referenceTo>
        <relationshipLabel>RDSHistoryTracking</relationshipLabel>
        <relationshipName>RDSHistoryTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDS-History Tracking</label>
    <nameField>
        <displayFormat>RHT-{00000000}</displayFormat>
        <label>RDS  History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDSHistoryTracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_HisTrac</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-History Tracking  record.</errorMessage>
    </validationRules>
</CustomObject>